// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`codeframe formatter should generate output 1`] = `
"<red>error</color>: <bold>An error</intensity> <dim>(foo)</intensity> at <green>first.html:1:6</color>:
> 1 | <div id="foo"
    |      ^^
  2 |     class="bar"
  3 |     name="baz">
  4 |
<bold>Details:</intensity> https://example.net/rule/foo.html


<yellow>warning</color>: <bold>A warning</intensity> <dim>(bar)</intensity> at <green>first.html:2:5</color>:
  1 | <div id="foo"
> 2 |     class="bar"
    |     ^^^^^
  3 |     name="baz">
  4 |
<bold>Details:</intensity> https://example.net/rule/bar.html


<red>error</color>: <bold>Lorem ipsum is not allowed</intensity> <dim>(no-lorem-ipsum)</intensity> at <green>second.html:1:4</color>:
> 1 | <p>lorem ipsum</p>
    |    ^^^^^^^^^^^
  2 |
<bold>Details:</intensity> https://example.net/rule/no-lorem-ipsum.html


<red><bold>2 errors and 1 warning found.</color></intensity>
"
`;

exports[`codeframe formatter should handle edge cases 1`] = `
"<yellow>warning</color>: <bold>Has invalid severity</intensity> <dim>(invalid-severity)</intensity> at <green>edge-cases.html:1:1</color>:
> 1 | <p>lorem ipsum</p>
    | ^
  2 |


<red>error</color>: <bold>Escape <script language="jabbascript"> & <span id='foo'></intensity> <dim>(special-characters)</intensity> at <green>edge-cases.html:2:2</color>:
  1 | <p>lorem ipsum</p>
> 2 |
    | ^


<red><bold>1 error and 1 warning found.</color></intensity>
"
`;

exports[`codeframe formatter should handle empty messages 1`] = `""`;

exports[`codeframe formatter should handle empty result 1`] = `""`;

exports[`codeframe formatter should handle missing rule url 1`] = `
"<red>error</color>: <bold>An error</intensity> <dim>(foo)</intensity> at <green>missing-url.html:1:6</color>:
> 1 | <div id="foo"
    |      ^^
  2 |     class="bar"
  3 |     name="baz">
  4 |


<yellow>warning</color>: <bold>A warning</intensity> <dim>(bar)</intensity> at <green>missing-url.html:2:5</color>:
  1 | <div id="foo"
> 2 |     class="bar"
    |     ^^^^^
  3 |     name="baz">
  4 |


<red><bold>2 errors found.</color></intensity>
"
`;

exports[`codeframe formatter should handle missing selector 1`] = `
"<red>error</color>: <bold>An error</intensity> <dim>(foo)</intensity> at <green>first.html:1:6</color>:
> 1 | <div id="foo"
    |      ^^
  2 |     class="bar"
  3 |     name="baz">
  4 |
<bold>Selector:</intensity> -
<bold>Details:</intensity> https://example.net/rule/foo.html


<red><bold>1 error and 1 warning found.</color></intensity>
"
`;

exports[`codeframe formatter should handle missing source 1`] = `
"<red>error</color>: <bold>An error</intensity> <dim>(foo)</intensity> at <green>missing-source.html:1:6</color>
<bold>Details:</intensity> https://example.net/rule/foo.html


<yellow>warning</color>: <bold>A warning</intensity> <dim>(bar)</intensity> at <green>missing-source.html:2:5</color>
<bold>Details:</intensity> https://example.net/rule/bar.html


<red><bold>2 errors found.</color></intensity>
"
`;

exports[`codeframe formatter should handle multiline error 1`] = `
"<red>error</color>: <bold>An error</intensity> <dim>(foo)</intensity> at <green>multiline.html:1:4</color>:
> 1 | <p>lorem
    |    ^^^^^
> 2 | ipsum</p>
    | ^^^^^
  3 |
<bold>Details:</intensity> https://example.net/rule/foo.html


<red><bold>1 error and 1 warning found.</color></intensity>
"
`;

exports[`codeframe formatter should support disabling links 1`] = `
"<red>error</color>: <bold>An error</intensity> <dim>(foo)</intensity> at <green>first.html:1:6</color>:
> 1 | <div id="foo"
    |      ^^
  2 |     class="bar"
  3 |     name="baz">
  4 |


<yellow>warning</color>: <bold>A warning</intensity> <dim>(bar)</intensity> at <green>first.html:2:5</color>:
  1 | <div id="foo"
> 2 |     class="bar"
    |     ^^^^^
  3 |     name="baz">
  4 |


<red>error</color>: <bold>Lorem ipsum is not allowed</intensity> <dim>(no-lorem-ipsum)</intensity> at <green>second.html:1:4</color>:
> 1 | <p>lorem ipsum</p>
    |    ^^^^^^^^^^^
  2 |


<red><bold>2 errors and 1 warning found.</color></intensity>
"
`;

exports[`codeframe formatter should support disabling summary 1`] = `
"<red>error</color>: <bold>An error</intensity> <dim>(foo)</intensity> at <green>first.html:1:6</color>:
> 1 | <div id="foo"
    |      ^^
  2 |     class="bar"
  3 |     name="baz">
  4 |
<bold>Details:</intensity> https://example.net/rule/foo.html


<yellow>warning</color>: <bold>A warning</intensity> <dim>(bar)</intensity> at <green>first.html:2:5</color>:
  1 | <div id="foo"
> 2 |     class="bar"
    |     ^^^^^
  3 |     name="baz">
  4 |
<bold>Details:</intensity> https://example.net/rule/bar.html


<red>error</color>: <bold>Lorem ipsum is not allowed</intensity> <dim>(no-lorem-ipsum)</intensity> at <green>second.html:1:4</color>:
> 1 | <p>lorem ipsum</p>
    |    ^^^^^^^^^^^
  2 |
<bold>Details:</intensity> https://example.net/rule/no-lorem-ipsum.html

"
`;

exports[`codeframe formatter should support enabling selector 1`] = `
"<red>error</color>: <bold>An error</intensity> <dim>(foo)</intensity> at <green>first.html:1:6</color>:
> 1 | <div id="foo"
    |      ^^
  2 |     class="bar"
  3 |     name="baz">
  4 |
<bold>Selector:</intensity> div
<bold>Details:</intensity> https://example.net/rule/foo.html


<yellow>warning</color>: <bold>A warning</intensity> <dim>(bar)</intensity> at <green>first.html:2:5</color>:
  1 | <div id="foo"
> 2 |     class="bar"
    |     ^^^^^
  3 |     name="baz">
  4 |
<bold>Selector:</intensity> div
<bold>Details:</intensity> https://example.net/rule/bar.html


<red>error</color>: <bold>Lorem ipsum is not allowed</intensity> <dim>(no-lorem-ipsum)</intensity> at <green>second.html:1:4</color>:
> 1 | <p>lorem ipsum</p>
    |    ^^^^^^^^^^^
  2 |
<bold>Selector:</intensity> p
<bold>Details:</intensity> https://example.net/rule/no-lorem-ipsum.html


<red><bold>2 errors and 1 warning found.</color></intensity>
"
`;
